# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  db.py  utils.py
page_analyzer/templates/: index.html  show.html  url.html  urls.html
