[project]
name = "python-project-83"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.3"
packages = [
  { include = "page_analyzer" },
]
dependencies = [
    "black>=25.1.0",
]

[tool.poetry.scripts]
page-analyzer = "page_analyzer.app:app"

dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "lxml>=5.3.1",
    "poetry>=2.1.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
    "validators>=0.34.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
