[project]
name = "hexlet-code"
version = "0.1.0"
description = "this website is analyzes the specified pages for SEO suitability by analogy with"
readme = "README.md"
requires-python = "==3.11.11"
packages = [
  { include = "page_analyzer" },
]

dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "lxml>=5.3.1",
    "poetry>=2.1.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
    "validators>=0.34.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
